--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^3.1.1",
     "next": "10.0.4",
     "next-images": "^1.6.2",
+    "polished": "^4.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
